# ITMO_FS

./: .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  README.rst  RELEASING.md  build_requirments.txt  coverage.xml  meta.yml  pyproject.toml  requirements.txt  sample.py  setup.py
.circleci/: config.yml
.dvc/: config
.github/: .codecov.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: add-method.md  bug_report.md  feature-request.md
.github/workflows/: CI.yml  codecov.yml  codeql-analysis.yml  pythonpackage.yml  pythonpublish.yml
ITMO_FS/: VERSION  __about__.py  __init__.py  _version.py
ITMO_FS/base/: __init__.py  base_transformer.py
ITMO_FS/embedded/: MOS.py  WeightedEvReg.py  __init__.py
ITMO_FS/ensembles/: __init__.py  cife.py
ITMO_FS/ensembles/measure_based/: Melif.py  WeightBased.py  __init__.py  fusion_functions.py
ITMO_FS/ensembles/model_based/: __init__.py  best_sum.py
ITMO_FS/ensembles/ranking_based/: Mixed.py  __init__.py  fusion_functions.py
ITMO_FS/filters/: Filter.py  MOSNS.py  MOSS.py  MrmrDiscreteFilter.py  QPFS.py  UnivariateFilter.py  VDM.py  __init__.py  filter_utils.py  measures.py  qpfs_filter.py  utils.py
ITMO_FS/filters/multivariate/: DISRwithMassive.py  FCBF.py  JMIM.py  MrmrDiscreteFilter.py  MultivariateFilter.py  STIR.py  STIRfs.py  TraceRatio.py  TraceRatioFisher.py  __init__.py  measures.py  mimaga.py  trace_ratio_fisher.py
ITMO_FS/filters/sparse/: MCFS.py  MLSFS.py  NDFS.py  RFS.py  SPEC.py  UDFS.py  __init__.py
ITMO_FS/filters/univariate/: NDFS.py  RFS.py  SPEC.py  TraceRatio.py  UnivariateFilter.py  VDM.py  __init__.py  cutting_rules.py  measures.py
ITMO_FS/hybrid/: ExactMelif.py  HybridRFE.py  IWSSr_SFLA.py  Melif.py  Mixed.py  __init__.py  filter_wrapper_hybrid.py  hybrid_rfe.py  optimizer.py
ITMO_FS/test/: filter_test.py
ITMO_FS/utils/: DataChecker.py  __init__.py  base_transformer.py  base_wrapper.py  cutting_rules.py  data_check.py  functions.py  information_theory.py  measures.py  qpfs_body.py
ITMO_FS/wrappers/: AddDelWrapper.py  BackwardSelection.py  RecursiveElimination.py  SequentialForwardSelection.py  __init__.py  qpfs_wrapper.py  wrapper_utils.py
docs/: api.rst  conf.py  index.rst  install.rst  introduction.rst  user_guide.rst
docs/_templates/: class.rst  function.rst
docs/webinar/: webinar.ipynb
filters/: FRatioFilter.py  Filter.py  FitCriterion.py  GiniIndexFilter.py  IGFilter.py  InformationGainFilter.py  MrmrDiscreteFilter.py  RandomFilter.py  SpearmanCorrelation.py  SpearmanCorrelationFilter.py  SymmetricUncertainty.py  SymmetricUncertaintyFilter.py  VDM.py  __init__.py  test.py  utils.py
htmlcov/: ITMO_FS___about___py.html  ITMO_FS___init___py.html  ITMO_FS_embedded_MOS_py.html  ITMO_FS_embedded___init___py.html  ITMO_FS_ensembles___init___py.html  ITMO_FS_ensembles_measure_based_WeightBased_py.html  ITMO_FS_ensembles_measure_based___init___py.html  ITMO_FS_ensembles_measure_based_fusion_functions_py.html  ITMO_FS_ensembles_model_based___init___py.html  ITMO_FS_ensembles_model_based_best_sum_py.html  ITMO_FS_ensembles_ranking_based_Mixed_py.html  ITMO_FS_ensembles_ranking_based___init___py.html  ITMO_FS_ensembles_ranking_based_fusion_functions_py.html  ITMO_FS_filters___init___py.html  ITMO_FS_filters_multivariate_DISRwithMassive_py.html  ITMO_FS_filters_multivariate_FCBF_py.html  ITMO_FS_filters_multivariate_MultivariateFilter_py.html  ITMO_FS_filters_multivariate_STIR_py.html  ITMO_FS_filters_multivariate_TraceRatioFisher_py.html  ITMO_FS_filters_multivariate___init___py.html  ITMO_FS_filters_multivariate_measures_py.html  ITMO_FS_filters_multivariate_mimaga_py.html  ITMO_FS_filters_univariate_NDFS_py.html  ITMO_FS_filters_univariate_RFS_py.html  ITMO_FS_filters_univariate_SPEC_py.html  ITMO_FS_filters_univariate_UnivariateFilter_py.html  ITMO_FS_filters_univariate_VDM_py.html  ITMO_FS_filters_univariate___init___py.html  ITMO_FS_filters_univariate_measures_py.html  ITMO_FS_filters_unsupervised_MCFS_py.html  ITMO_FS_filters_unsupervised_UDFS_py.html  ITMO_FS_filters_unsupervised___init___py.html  ITMO_FS_filters_unsupervised_trace_ratio_laplacian_py.html  ITMO_FS_hybrid_IWSSr_SFLA_py.html  ITMO_FS_hybrid_Melif_py.html  ITMO_FS_hybrid___init___py.html  ITMO_FS_hybrid_filter_wrapper_hybrid_py.html  ITMO_FS_utils___init___py.html  ITMO_FS_utils_base_transformer_py.html  ITMO_FS_utils_base_wrapper_py.html  (+28 more)
hybrid/: Melif.py  __init__.py
test/: EGSA_test.py  ExactMelif_test.py  HybridRFETest.py  Melif_test.py  __init__.py  cife_test.py  embedded_test.py  ensemble_test.py  experiments.py  filter_test.py  hybrid_test.py  multivariate_filters_test.py  mytesy.py  sparse_filters_test.py  test_functions.py  test_melif.py  tests.py  univariate_filters_test.py  univariate_measures_test.py  unsupervised_filters_test.py  utils.py  validation.py  wrapper_test.py
test/data/: matrix  phpd8EoD9.csv
test/datasets/: .gitignore  BASEHOCK.mat.dvc  COIL20.mat.dvc  arcene.csv.dvc  dexter.csv.dvc  gisette.csv.dvc  madelon.csv  orlraws10P.mat.dvc
test/filter test/: filter_test.py
test/filter_test/: filter_test.py
tests/: EGSA_test.py  conftest.py  embedded_test.py  ensemble_test.py  hybrid_test.py  melif_test.py  multivariate_filters_test.py  univariate_filters_test.py  univariate_measures_test.py  unsupervised_filters_test.py  utils.py  wrapper_test.py
tests/datasets/: .gitignore  dorothea.csv.dvc  madelon.csv.dvc
tests/synthetic/: test_package_smoke.py
utils/: F1_score.py  __init__.py  data_check.py  functions.py  metrics.py
visualization/: old_visualization.ipynb
wrappers/: AddDelWrapper.py  BackwardSelection.py  RandowWrapper.py  RecursiveElimination.py  SequentialForwardSelection.py  __init__.py  wrapper_utils.py
(+25 files in other folders)
